--- a/alumni_website/templates/authentication/login.html
+++ b/alumni_website/templates/authentication/login.html
@@ -12,7 +12,7 @@ static 'app1/css/style.css'
 
 {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" style="text-align: center;" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
