--- a/alumni_website/templates/authentication/sign_up.html
+++ b/alumni_website/templates/authentication/sign_up.html
@@ -14,7 +14,7 @@
 
 {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show"  style="text-align:center" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
