--- a/alumni_website/templates/core/home.html
+++ b/alumni_website/templates/core/home.html
@@ -55,7 +55,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="school-image">
-              <img src="/static/images/School-Photo.webp" alt="Alumni gathering" class="img-fluid rounded">
+              <img src="/static/images/sample_school_photo.png" alt="Alumni gathering" class="img-fluid rounded">
             </div>
           </div>
         </div>
