--- a/alumni_website/static/core/css/home.css
+++ b/alumni_website/static/core/css/home.css
@@ -19,6 +19,10 @@
   gap: 2rem;
 }
 
+.school-image{
+  height: 90%;
+}
+
 .alumni .alumni-intro .alumni-stats .stat-item {
   display: flex;
   flex-direction: column;
