Make code production ready

--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -23,7 +23,7 @@
   <div class="container-fluid main-nav">
   <nav class="navbar navbar-expand-md bg-dark navbar-dark nav">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'home' %}"><img src="/static/images/school_logo.png" alt="Logo" class="logo"></a>
+      <a class="navbar-brand" href="{% url 'home' %}"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWc_Qd7Nj14efNpEMo0NHiAl3sQYPiG2CQww&s" alt="Logo" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
