--- a/alumni_website/templates/core/home.html
+++ b/alumni_website/templates/core/home.html
@@ -55,7 +55,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="school-image">
-              <img src="/static/images/sample_school_photo.png" alt="Alumni gathering" class="img-fluid rounded">
+              <img src="https://annoying-platypus.transforms.svdcdn.com/production/images/About-us/Main-Reception-OIS.jpg?w=1500&h=870&auto=compress%2Cformat&fit=crop&dm=1635706098&s=1fda6c618f13c2660f01b657824dc177" alt="School photo" class="img-fluid rounded">
             </div>
           </div>
         </div>
