--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -66,6 +66,7 @@
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="{% url 'directory' %}">Search Alumni</a></li>
           <li><a class="dropdown-item" href="{% url 'mentor_directory' %}">Our Mentors</a></li>
+          <li><a class="dropdown-item" href="{% url 'teacher_directory' %}">Teachers</a></li>
         </ul>
       </li>
 
