--- a/alumni_website/staticfiles/directory/css/directory.css
+++ b/alumni_website/staticfiles/directory/css/directory.css
@@ -169,6 +169,10 @@
   border-radius: 0px;   
 }
 
+#teacher{
+  border-radius: 0px 30px 30px 0px;
+}
+
 .uni{
     border-radius: 0px 30px 30px 0px;
 }
