Fix sign up bug for student user

--- a/alumni_website/templates/authentication/sign_up.html
+++ b/alumni_website/templates/authentication/sign_up.html
@@ -42,7 +42,7 @@
             </div>
             <div class="input-field">
                 <label class="form-check-label">Are you a teacher?</label>
-                <input type="checkbox" id="isTeacher" name="isTeacher" required />
+                <input type="checkbox" id="isTeacher" name="isTeacher"/>
             </div>
             <div class="student_form">
                 <div class="input-field">
@@ -51,7 +51,7 @@
             </div>
             <div class="teacher_form">
                 <div class="input-field">
-                    <select class="form-control" name="subject" id="subject" required>
+                    <select class="form-control" name="subject" id="subject">
                         <option value="" disabled selected>Select a subject</option>
                         <option value="Mathematics">Mathematics</option>
                         <option value="Biology">Biology</option>
